warehouse20/plex/lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex-lb
  namespace: warehouse20
  annotations:
    metallb.universe.tf/address-pool: internal
spec:
  type: LoadBalancer
  loadBalancerIP: 172.20.240.10
  externalTrafficPolicy: Local
  ports:
  - name: http
    targetPort: http
    port: 32400
    protocol: TCP
  selector:
    app: plex
