warehouse20/plex/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-tls-secret: ingress-nginx/cf-origin
    # nginx.ingress.kubernetes.io/enable-access-log: "false"
  labels:
    app: plex
    component: plexmediaserver
  name: plex
  namespace: warehouse20
spec:
  rules:
  - host: plex.warehouse20.com
    http:
      paths:
      - backend:
          serviceName: plex
          servicePort: 32400
        path: /
  tls:
  - hosts:
    - "*.warehouse20.com"
    secretName: cf-w20
