warehouse20/plex/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: plex
  namespace: warehouse20
spec:
  podSelector:
    matchLabels:
      app: plex
  policyTypes:
  - Ingress
  ingress:
  - from: []
    ports:
    - protocol: TCP
      port: http
